# pop-project

./: README.md  constants.py  data_set.py  generators.py  helpers.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
algorithms/: best_opponents_list.py  evaluation.py
battle/: battle.py  battle_formulas.py  helpers.py
constants/: constants.py
data/: data.py  generators.py  helpers.py
src/: main.py
src/classes/: __init__.py  best_opponents_list.py  pokemon_team.py
src/constants/: __init__.py  constants.py
src/data/: __init__.py  data.py
src/experiments/: __init__.py  ea_experiments.py  sa_experiments.py
src/notebooks/: SA_solver_experiments.ipynb  advanced_ea_experiments.ipynb  advanced_ea_experiments_bp.ipynb  advanced_sa_experiments.ipynb  first sa_experiments.ipynb  pokemon_tournament.ipynb
src/report/: reports.py
src/schemas/: __init__.py  pokemon.py
src/simulation/: __init__.py  formulas.py  simulation.py
src/solvers/: __init__.py  evaluation.py  evolution_algorithm_solver.py  evolutionary_algorithm_solver.py  hill_climbing_solver.py  random_search_solver.py  simulated_annealing_solver.py
src/visualization/: plots.py  utils.py
structures/: best_opponents_list.py  team.py
